<resources>
    <string name="app_name">Scorpion1</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="ime_i_prezime">Ime i prezime</string>
    <string name="log_out">Log out</string>
    <string name="ve_ima_ra_un">Već imaš račun</string>
    <string name="sign_up">Sign up</string>
    <string name="broj_telefona">Broj telefona</string>
    <string name="e_mail_adresa">E- mail adresa</string>
    <string name="login">Login</string>
    <string name="ime">Ime</string>
    <string name="prezime">Prezime</string>
    <string name="dodatne_informacije">Dodatne informacije</string>
    <string name="datum_ro_enja">Datum rođenja</string>
    <string name="odaberite_va_eg_doktora">Odaberite vašeg doktora</string>
    <string name="va_datum_ro_enja_je">Vaš datum rođenja je:</string>
    <string name="va_doktor_je">Vaš doktor je:</string>
    <string name="finish">Finish</string>
    <string name="nazad">Nazad</string>
    <string name="odaberite_datum">Odaberite datum</string>
    <string name="username">Username</string>
    <string-array name="imena">
    <item>"Doktor"</item>
    <item>"Doktor 2"</item>
    <item>"Doktor 3"</item>
    <item>"Doktor 4"</item>
    </string-array>
</resources>
