<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:padding="10dp">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:text="@string/sign_up"
        android:textSize="50sp"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/ime"
        android:textSize="30sp"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/nameR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="textPersonName"
        android:autofillHints="" />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/prezime"
        android:textSize="30sp"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/surnameR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="textPersonName"
        android:autofillHints="" />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="italic"
        android:text="@string/e_mail_adresa"
        android:textSize="30sp"
        />
    <EditText
        android:id="@+id/emailR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="textEmailAddress"
        android:autofillHints="" />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/password"
        android:textStyle="italic"
        android:textSize="30sp"
        />

    <EditText
        android:id="@+id/passwordR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:autofillHints="" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="italic"
        android:text="@string/broj_telefona"
        android:textSize="30sp"
        />
    <EditText
        android:id="@+id/brojMob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="number"
        android:autofillHints="" />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/loginBR"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/textViewV"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/ve_ima_ra_un"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        />


</LinearLayout>
