<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/dodatne_informacije"
        android:textSize="42sp"
        />

    <TextView
        android:id="@+id/textV"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/datum_ro_enja"
        android:textSize="30sp"
        android:layout_marginTop="25dp"
        />
    <TextView
        android:id="@+id/textW"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/va_datum_ro_enja_je"
        android:textSize="30sp"
        android:layout_marginTop="25dp"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/odaberite_va_eg_doktora"
        android:textSize="30sp"
        />

    <EditText
        android:id="@+id/doctorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <Button
        android:layout_width="match_parent"
        android:id="@+id/finishB"
        android:layout_height="wrap_content"
        android:text="Finish"
        android:layout_marginTop="20dp"
        />



    <TextView
        android:id="@+id/textViewRe"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Nazad"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="280dp"
        android:layout_gravity="center_horizontal"
        />


</LinearLayout>
